uploading files and general clean up

--- a/manage_bigquery_tables/manage_bigquery_tables.ipynb
+++ b/manage_bigquery_tables/manage_bigquery_tables.ipynb
@@ -5,8 +5,16 @@
    "id": "a2400580-29a4-4eeb-a5b2-45f15ab2a027",
    "metadata": {},
    "source": [
-    "# Manage BigQuery Tables\n",
-    "* Code to connect with BigQuery and delete, create, and load tables as needed"
+    "# Manage BigQuery Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9b71da8-f920-4903-852b-950d4dd5ceaa",
+   "metadata": {},
+   "source": [
+    "#### Purpose\n",
+    "Code to connect with BigQuery and delete, create, and load tables as needed"
    ]
   },
   {
@@ -20,9 +28,6 @@
     "\n",
     "# functionality for authenticating using Google Cloud Service Account credentials\n",
     "from google.oauth2 import service_account\n",
-    "\n",
-    "# authenticate and authorize applications to access Google APIs using Service Account credentials\n",
-    "from oauth2client.service_account import ServiceAccountCredentials\n",
     "\n",
     "# allows interaction with bigquery \n",
     "from google.cloud import bigquery\n",
@@ -130,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function delete_table\n",
+    "# Function: delete_table\n",
     "\n",
     "def delete_table(_project_dataset_table_ref):\n",
     "    \"\"\"\n",
@@ -155,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # TEST delete_table\n",
+    "# # TEST: delete_table\n",
     "\n",
     "# # 1. Determine desired table (assign table_ref with one of the table_ids printed above)\n",
     "# table_ref = \"xx\"\n",
@@ -172,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function create_and_load_table\n",
+    "# Function: create_and_load_table\n",
     "\n",
     "def create_and_load_table(_project_dataset_table_ref, _df_to_load):\n",
     "    \"\"\"\n",
@@ -207,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # TEST create_and_load_table\n",
+    "# # # TEST: create_and_load_table\n",
     "\n",
     "# # 1. Determine desired table (assign table_ref with one of the table_ids printed above)\n",
     "# table_ref = \"xx\"\n",
