--- a/transform_ipynb_to_py/transform_ipynb_to_py.ipynb
+++ b/transform_ipynb_to_py/transform_ipynb_to_py.ipynb
@@ -23,7 +23,7 @@
     "# path to the folder containing ipynb files\n",
     "file_folder = '../xx'\n",
     "# list of ipynb files\n",
-    "filenames = ['xx.ipynb', 'xx.ipynb']\n",
+    "filenames = ['xx.ipynb']\n",
     "\n",
     "# for each file\n",
     "for filename in filenames:\n",
